force-app/main/default/objects/Priority__c/Priority__c.object-meta.xml
<CustomObject>
    <description>Priority records look up to accounts and account plans. They store the information pertinent to the prioritization data for a specific account.</description>
    <label>Priority Workbook</label>
    <nameField>
        <label>Priority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Priorities Workbook</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>