force-app/main/default/objects/Priority__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipName>Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>