force-app/main/default/objects/Priority__c/fields/IM_Volume__c.field-meta.xml
<CustomField>
    <fullName>IM_Volume__c</fullName>
    <label>IM Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>