force-app/main/default/objects/Priority__c/fields/IMGA__c.field-meta.xml
<CustomField>
    <fullName>IMGA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMGA</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>