force-app/main/default/objects/Priority__c/fields/Priority_Plan__c.field-meta.xml
<CustomField>
    <fullName>Priority_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority Plan</label>
    <referenceTo>Priority_Plan__c</referenceTo>
    <relationshipName>Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>