force-app/main/default/objects/Priority__c/fields/Reason_for_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Discrepancy__c</fullName>
    <inlineHelpText>Enter reason for disagreeing with the Centralization Prioritization Recommendation</inlineHelpText>
    <label>Reason for Discrepancy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>