force-app/main/default/objects/Priority__c/fields/Reason_for_Priority__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Priority__c</fullName>
    <inlineHelpText>Enter the reason for making this priority record part of your submission for the time period.</inlineHelpText>
    <label>Reason for Priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>