force-app/main/default/objects/Priority__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Priority_Plan__c</columns>
    <columns>NAME</columns>
    <columns>IMGA__c</columns>
    <columns>Centralized_Prioritization__c</columns>
    <columns>Rep_Prioritization__c</columns>
    <columns>IM_Volume__c</columns>
    <columns>Non_IM_Volume__c</columns>
    <columns>Risk_Profile__c</columns>
    <columns>Reason_for_Discrepancy__c</columns>
    <columns>Reason_for_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>