force-app/main/default/objects/Priority__c/listViews/Current_Plan.listView-meta.xml
<ListView>
    <fullName>Current_Plan</fullName>
    <columns>NAME</columns>
    <columns>Priority_Plan__c</columns>
    <columns>IMGA__c</columns>
    <columns>Account_Plan__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>Centralized_Prioritization__c</columns>
    <columns>Rep_Prioritization__c</columns>
    <columns>IM_Volume__c</columns>
    <columns>Non_IM_Volume__c</columns>
    <columns>Risk_Profile__c</columns>
    <columns>Reason_for_Discrepancy__c</columns>
    <columns>Reason_for_Priority__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account_Plan_Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Current Plan</label>
    <language>en_US</language>
</ListView>