force-app/main/default/objects/Priority__c/listViews/My_Priorities.listView-meta.xml
<ListView>
    <fullName>My_Priorities</fullName>
    <columns>NAME</columns>
    <columns>Priority_Plan__c</columns>
    <columns>Contract_Renewal_Date__c</columns>
    <columns>IMGA__c</columns>
    <columns>Account_Plan__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>Centralized_Prioritization__c</columns>
    <columns>Rep_Prioritization__c</columns>
    <columns>IM_Volume__c</columns>
    <columns>Non_IM_Volume__c</columns>
    <columns>Risk_Profile__c</columns>
    <columns>Reason_for_Discrepancy__c</columns>
    <columns>Reason_for_Priority__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Priorities</label>
    <language>en_US</language>
</ListView>